--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">lottoNumberSelector</string>
+    <string name="addNumber">번호 추가하기</string>
+    <string name="initNumber">초기화</string>
+    <string name="autoCreateNumber">자동 생성 시작</string>
 </resources>
